--- a/AzureDemo_UserInfo/MainWindow.xaml
+++ b/AzureDemo_UserInfo/MainWindow.xaml
@@ -5,8 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AzureDemo_UserInfo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Prueba Azure MySQL" Height="482.363" Width="647.431">
+    <Grid Background="#FFF7F7F7">
+        <TextBox x:Name="txtCodigo" HorizontalAlignment="Left" Height="23" Margin="31,56,0,0" TextWrapping="Wrap" Text="Buscar" VerticalAlignment="Top" Width="317" Foreground="#FFBFBFBF" FontFamily="Caviar Dreams" FontSize="16" BorderThickness="0"/>
+        <Button Content="Buscar" HorizontalAlignment="Left" Margin="375,56,0,0" VerticalAlignment="Top" Width="84" Height="23" Background="#FF59C9FD" BorderBrush="#FF59C9FD" Foreground="White" FontFamily="Caviar Dreams" FontWeight="Bold" FontSize="14" Click="Button_Click_1"/>
+        <Image x:Name="userImg" HorizontalAlignment="Left" Height="175" Margin="31,181,0,0" VerticalAlignment="Top" Width="172" RenderTransformOrigin="0.492,0.512" Source="img/user.png"/>
+        <Button Content="Limpiar" HorizontalAlignment="Left" Margin="486,56,0,0" VerticalAlignment="Top" Width="126" Height="23" Background="#FF59C9FD" BorderBrush="#FF59C9FD" Foreground="White" FontFamily="Caviar Dreams" FontWeight="Bold" FontSize="14" Click="Button_Click"/>
+        <Label Content="Nombres:" HorizontalAlignment="Left" Margin="248,181,0,0" VerticalAlignment="Top" FontFamily="Caviar Dreams" FontSize="16" FontWeight="Bold"/>
+        <Label Content="Apellidos:" HorizontalAlignment="Left" Margin="248,215,0,0" VerticalAlignment="Top" FontFamily="Caviar Dreams" FontSize="16" FontWeight="Bold"/>
+        <Label Content="DNI:" HorizontalAlignment="Left" Margin="248,249,0,0" VerticalAlignment="Top" FontFamily="Caviar Dreams" FontSize="16" FontWeight="Bold"/>
+        <Label Content="Perfil 1:" HorizontalAlignment="Left" Margin="248,283,0,0" VerticalAlignment="Top" FontFamily="Caviar Dreams" FontSize="16" FontWeight="Bold"/>
+        <Label Content="Perfil 2:" HorizontalAlignment="Left" Margin="248,317,0,0" VerticalAlignment="Top" FontFamily="Caviar Dreams" FontSize="16" FontWeight="Bold"/>
+        <Label Content="Perfil 3:" HorizontalAlignment="Left" Margin="248,351,0,0" VerticalAlignment="Top" FontFamily="Caviar Dreams" FontSize="16" FontWeight="Bold"/>
+        <TextBox x:Name="txtNombre" HorizontalAlignment="Left" Height="23" Margin="375,187,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="237" FontFamily="Caviar Dreams" FontSize="18" Background="White" BorderThickness="0" ClipToBounds="True" Foreground="#FF1F1F1F" RenderTransformOrigin="0,0"/>
+        <TextBox x:Name="txtApellido" HorizontalAlignment="Left" Height="23" Margin="375,221,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="237" FontFamily="Caviar Dreams" FontSize="18" Background="White" BorderThickness="0" ClipToBounds="True" Foreground="#FF1F1F1F" RenderTransformOrigin="0,0"/>
+        <TextBox x:Name="txtDNI" HorizontalAlignment="Left" Height="23" Margin="375,255,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="237" FontFamily="Caviar Dreams" FontSize="18" Background="White" BorderThickness="0" ClipToBounds="True" Foreground="#FF1F1F1F" RenderTransformOrigin="0,0"/>
+        <TextBox x:Name="txtP1" HorizontalAlignment="Left" Height="23" Margin="375,289,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="237" FontFamily="Caviar Dreams" FontSize="18" Background="White" BorderThickness="0" ClipToBounds="True" Foreground="#FF1F1F1F" RenderTransformOrigin="0,0"/>
+        <TextBox x:Name="txtP2" HorizontalAlignment="Left" Height="23" Margin="375,323,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="237" FontFamily="Caviar Dreams" FontSize="18" Background="White" BorderThickness="0" ClipToBounds="True" Foreground="#FF1F1F1F" RenderTransformOrigin="0,0"/>
+        <TextBox x:Name="txtP3" HorizontalAlignment="Left" Height="23" Margin="375,357,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="237" FontFamily="Caviar Dreams" FontSize="18" Background="White" BorderThickness="0" ClipToBounds="True" Foreground="#FF1F1F1F" RenderTransformOrigin="0,0"/>
+
+
     </Grid>
 </Window>
